antlr-practise/src/main/java/com/xiaoqq/antlr/practise/listen4/ArrayInit.g4
/**
The file is taken from book "The Definitive ANTRL 4 Reference, 2nd Edition.pdf" (Chapter 3.1, page 22)
Grammars always start with a grammar header. This grammar is called
* ArrayInit and must match the filename: ArrayInit.g4
*/
grammar ArrayInit;
/** A rule called init that matches comma-separated values between {...}. */
init : '{' value (',' value)* '}' ; // must match at least one value
/** A value can be either a nested array/struct or a simple integer (INT) */
value : init
        | INT
        ;
// parser rules start with lowercase letters, lexer rules with uppercase
INT : [0-9]+ ; // Define token INT as one or more digits
WS : [ \t\r\n]+ -> skip ; // Define whitespace rule, toss it out
